k8s/07-payment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
  namespace: zia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
        - name: payment
          image: zia/payment:dev
          imagePullPolicy: Never
          ports:
            - containerPort: 3002
          readinessProbe:
            httpGet:
              path: /health
              port: 3002
            initialDelaySeconds: 10
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: zia
spec:
  selector:
    app: payment
  ports:
    - port: 3002
      targetPort: 3002
