k8s/08-notification.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification
  namespace: zia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification
  template:
    metadata:
      labels:
        app: notification
    spec:
      containers:
        - name: notification
          image: zia/notification:dev
          imagePullPolicy: Never
          ports:
            - containerPort: 3001
          readinessProbe:
            httpGet:
              path: /
              port: 3001
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3001
            initialDelaySeconds: 30
            periodSeconds: 20
            failureThreshold: 5

---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: zia
spec:
  selector:
    app: notification
  ports:
    - port: 3001
      targetPort: 3001
